--- a/cbiancheng/cbiancheng.cbp
+++ b/cbiancheng/cbiancheng.cbp
@@ -31,6 +31,8 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="EnumH.h" />
+		<Unit filename="StructD.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
